[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/paper.png" type="Texture" id=1]
[ext_resource path="res://scripts/Paper.gd" type="Script" id=2]
[ext_resource path="res://sfx/scissors.mp3" type="AudioStream" id=3]
[ext_resource path="res://sfx/stone.mp3" type="AudioStream" id=4]
[ext_resource path="res://sfx/paper.mp3" type="AudioStream" id=5]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float outline_width = 2.0;
uniform vec4 outline_color: hint_color;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;
	float a;
	float maxa = col.a;
	float mina = col.a;

	a = texture(TEXTURE, UV + vec2(0.0, -outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(0.0, outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(-outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	COLOR = mix(col, outline_color, maxa - mina);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 4 )
shader_param/outline_width = 2.0
shader_param/outline_color = null

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 16 )

[node name="Paper" type="KinematicBody2D" groups=["mob"]]
input_pickable = true
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
material = SubResource( 3 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -9.53674e-07 )
shape = SubResource( 1 )

[node name="RockSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PaperSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ScissorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -24.0
margin_top = -32.0
margin_right = 24.0
margin_bottom = -16.0
align = 1
valign = 1
uppercase = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9.53674e-07 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
